<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="150dp" />

    <Button
        android:id="@+id/btnAct2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#2196F3"
        android:text="@string/btnAct2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="230dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="105dp" />

    <Button
        android:id="@+id/btnAct3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#2196F3"
        android:text="@string/btnAct3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="230dp"
        android:layout_marginTop="377dp"
        android:layout_marginEnd="105dp" />

    <Button
        android:id="@+id/btnAct4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#2196F3"
        android:text="@string/btnAct4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="230dp"
        android:layout_marginTop="452dp"
        android:layout_marginEnd="105dp" />

    <TextView
        android:id="@+id/tvAct1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvAct1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="5dp"
        android:layout_marginTop="240dp"
        android:layout_marginEnd="180dp" />

    <TextView
        android:id="@+id/tvAct2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvAct2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="5dp"
        android:layout_marginTop="315dp"
        android:layout_marginEnd="180dp" />

    <TextView
        android:id="@+id/tvAct3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvAct3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="5dp"
        android:layout_marginTop="390dp"
        android:layout_marginEnd="180dp" />

    <TextView
        android:id="@+id/tvAct4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvAct4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="5dp"
        android:layout_marginTop="465dp"
        android:layout_marginEnd="180dp" />

    <ImageView
        android:id="@+id/imgStudio"
        android:layout_width="114dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/android_studio_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/btnAct1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#2196F3"
        android:text="@string/btnAct1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="230dp"
        android:layout_marginTop="227dp"
        android:layout_marginEnd="105dp" />
</androidx.constraintlayout.widget.ConstraintLayout>