<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WidgetsActivity">

    <CheckBox
        android:id="@+id/chAcepto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chAcepto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="100dp"
        android:layout_marginTop="620dp"
        android:layout_marginEnd="130dp" />

    <Switch
        android:id="@+id/sw1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sw1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="190dp" />

    <RadioButton
        android:id="@+id/rdButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rdButton1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="100dp"
        android:layout_marginTop="290dp"
        android:layout_marginEnd="115dp" />

    <SeekBar
        android:id="@+id/seeBrillo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="230dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="6dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="165dp"
        android:layout_height="71dp"
        app:srcCompat="@drawable/logo_android_1024x640"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="230dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="6dp"/>

    <RadioButton
        android:id="@+id/rdButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rdButton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="100dp"
        android:layout_marginTop="340dp"
        android:layout_marginEnd="116dp" />

    <TextView
        android:id="@+id/tvTerminos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="580dp"
        android:layout_marginEnd="130dp"
        android:text="@string/tvTerminos"
        android:textColor="#2196F3"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnAtras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnRegresar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="100dp"
        android:layout_marginTop="680dp"
        android:layout_marginEnd="116dp" />

</androidx.constraintlayout.widget.ConstraintLayout>